[package]
name = "lantern"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.21", features = ["cargo"] }
colored = "2.1.0"
crossterm = "0.28.1"
log = "0.4.22"
ratatui = "0.29.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
simplelog = "0.12.2"
strum = "0.26.3"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
ping = "0.7.1-beta.1"
chrono = "0.4.43"
json = "0.12.4"
eyre = "0.6.12"
